Work on home page markup and styling

--- a/app/views/layouts/_sidebar.html.haml
+++ b/app/views/layouts/_sidebar.html.haml
@@ -1,3 +1,5 @@
 .sidebar
-  %h1.text-white Michael Dawson
-  Musings on life, etc
+  = image_tag 'test-tall.png'
+  .content
+    %h1.text-white Michael Dawson
+    %p Software developer, entrepreneur, animator
