--- a/app/assets/stylesheets/app/typography.scss
+++ b/app/assets/stylesheets/app/typography.scss
@@ -1,3 +1,13 @@
+h1 {
+  font-size: 40px;
+  letter-spacing: -0.5px;
+}
+
 h1, h2, h3, h4, h5, h6 {
+  font-family: 'Source Sans Pro';
+  font-weight: 100;
+}
+
+body {
   font-weight: 300;
 }
