--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -4,8 +4,8 @@
     %title Michael
     = csrf_meta_tags
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
+    = stylesheet_link_tag    '//fonts.googleapis.com/css?family=Source+Sans+Pro:100'
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
   %body
-    .container
-      = render 'layouts/sidebar'
-      = yield
+    = render 'layouts/sidebar'
+    .page= yield
