--- a/app/views/layouts/_sidebar.html.haml
+++ b/app/views/layouts/_sidebar.html.haml
@@ -3,3 +3,21 @@
   .content
     %h1.text-white Michael Dawson
     %p Software developer, entrepreneur, animator
+    %hr
+    .about
+      %i.ion-ios-location-outline
+      Melbourne, Australia
+    .about
+      %i.ion-ios-gear-outline
+      Ruby on Rails, React JS
+    .about
+      %i.ion-ios-videocam-outline
+      After Effects, web animation
+
+    .social
+      = link_to 'https://github.com/michaeldawson' do
+        %i.ion-social-github-outline
+      = link_to 'https://www.facebook.com/monsieurdawson' do
+        %i.ion-social-facebook-outline
+      = link_to 'https://twitter.com/michaelpdawson' do
+        %i.ion-social-twitter-outline
