--- a/app/assets/stylesheets/app/typography.scss
+++ b/app/assets/stylesheets/app/typography.scss
@@ -4,7 +4,7 @@ h1 {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: 'Source Sans Pro';
+  font-family: $heading_font_family;
   font-weight: 100;
 }
 
