--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,4 +1,5 @@
-- 20.times do
-  .card.padded.red
-    = link_to root_path do
-      %h3.card-title Hey! I'm a card!
+.card.padded.blue
+  .medium-editor-document
+    .layout-single-column
+      %h2 A new post.
+      %code This is a new code block.
