--- a/app/assets/stylesheets/app/sidebar.scss
+++ b/app/assets/stylesheets/app/sidebar.scss
@@ -1,6 +1,6 @@
 .sidebar {
   background: #fff;
-  border-right: 1px solid $red;
+  border-right: 2px solid $red;
   position: fixed;
   top: 0;
   left: 0;
@@ -60,7 +60,8 @@
 }
 
 .page {
+  min-height: 100vh;
   padding: 30px;
   padding-left: 350px;
-  background: $blue;
+  background: #f6f6f6;
 }
