--- a/app/views/layouts/_sidebar.html.haml
+++ b/app/views/layouts/_sidebar.html.haml
@@ -2,7 +2,8 @@
   = image_tag 'test-tall.png'
   .content
     %h1.text-white Michael Dawson
-    %p Software developer, entrepreneur, animator
+    %p
+      Software - Entrepreneurship - Animation
     %hr
     .about
       %i.ion-ios-location-outline
