--- a/app/assets/stylesheets/app/typography.scss
+++ b/app/assets/stylesheets/app/typography.scss
@@ -1,6 +1,5 @@
 h1 {
   font-size: 40px;
-  letter-spacing: -0.5px;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -10,4 +9,8 @@ h1, h2, h3, h4, h5, h6 {
 
 body {
   font-weight: 300;
+}
+
+p {
+  font-size: 15px;
 }
