Work on posts and styling

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,6 +1,6 @@
 @import "base/bootstrap/bootstrap";
 @import "variables/**/*";
 @import "lib/ionicons/ionicons";
-@import "lib/medium-editor/*";
+@import "lib/medium-editor/medium-editor";
 @import "lib/medium-editor-overrides";
 @import "app/**/*";
