--- a/app/assets/stylesheets/lib/medium-editor-overrides.scss
+++ b/app/assets/stylesheets/lib/medium-editor-overrides.scss
@@ -1,4 +1,5 @@
 .medium-editor {
+  padding-top: 20px;
   border-top: solid 1px rgba(0,0,0,0.145);
   background: #fff;
 }
@@ -21,6 +22,8 @@
 
 .medium-editor-document h2 {
   font-family: $heading_font_family;
+  font-size: 40px;
+  font-weight: 100;
   line-height: 1;
   -webkit-font-smoothing: antialiased;
   text-align: center;
