--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,5 +1,6 @@
-.card.padded.blue
-  .medium-editor-document
-    .layout-single-column
-      %h2 A new post.
-      %code This is a new code block.
+- posts.each do |post|
+  .card.padded.blue
+    .medium-editor-document
+      .layout-single-column
+        %h2= post.title
+        = post.body.html_safe
