Work on scaffolding for posts

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,4 +3,5 @@
 @import "lib/ionicons/ionicons";
 @import "lib/medium-editor/medium-editor";
 @import "lib/medium-editor-overrides";
+@import "lib/standard-form";
 @import "app/**/*";
