--- a/app/assets/stylesheets/lib/medium-editor-overrides.scss
+++ b/app/assets/stylesheets/lib/medium-editor-overrides.scss
@@ -1,12 +1,13 @@
 .medium-editor {
-  padding-top: 20px;
   border-top: solid 1px rgba(0,0,0,0.145);
   background: #fff;
+}
+.medium-editor-document {
+  padding: 25px;
 }
 .medium-editor-document[contenteditable] {
   min-height: 700px;
 }
-
 .medium-editor-document blockquote {
   border-left-color: $red;
 }
@@ -17,16 +18,14 @@
 .medium-editor-highlight-menu button.medium-editor-highlight-menu-button-active {
   color: $red;
 }
-
 .medium-editor-document {
   p, blockquote, li {
     color: #777;
   }
 }
-
 .medium-editor-document h2 {
   font-family: $heading_font_family;
-  font-size: 40px;
+  font-size: 32px;
   font-weight: 100;
   line-height: 1;
   -webkit-font-smoothing: antialiased;
