--- a/app/views/layouts/_sidebar.html.haml
+++ b/app/views/layouts/_sidebar.html.haml
@@ -1,7 +1,7 @@
 .sidebar
   = image_tag 'test-tall.png'
   .content
-    %h1.text-white Michael Dawson
+    %h1.text-white= link_to 'Michael Dawson', root_path
     %p
       Software - Entrepreneurship - Animation
     %hr
