--- a/app/views/posts/new.html.haml
+++ b/app/views/posts/new.html.haml
@@ -1,3 +1,2 @@
-= standard_form_for post, url: posts_path do |form|
-  .body
-    = render 'form', form: form
+= standard_form_for post, url: posts_path, layout: :ios do |form|
+  = render 'form', form: form
