--- a/app/views/layouts/_sidebar.html.haml
+++ b/app/views/layouts/_sidebar.html.haml
@@ -14,6 +14,11 @@
     .about
       %i.ion-ios-videocam-outline
       After Effects, web animation
+    %hr/
+    .about
+      = link_to post_path('contact') do
+        %i.ion-ios-email-outline
+        Get in touch
 
     .social
       = link_to 'https://github.com/michaeldawson' do
