--- a/app/views/posts/new.html.haml
+++ b/app/views/posts/new.html.haml
@@ -1,2 +1,2 @@
-= standard_form_for post, url: posts_path, layout: :ios do |form|
+= standard_form_for post, url: posts_path do |form|
   = render 'form', form: form
