--- a/app/assets/stylesheets/lib/medium-editor-overrides.scss
+++ b/app/assets/stylesheets/lib/medium-editor-overrides.scss
@@ -13,6 +13,7 @@
 }
 .medium-editor-document blockquote {
   border-left-color: $red;
+  border-left-width: 2px;
 }
 .medium-editor-document code {
   display: block;
