--- a/app/assets/stylesheets/variables/colors.scss
+++ b/app/assets/stylesheets/variables/colors.scss
@@ -1,9 +1,5 @@
-$blue: #26a9df;
-$red: #FF001A;
-$orange: #FF7200;
-$green: #39CE4A;
-$teal: #0ECDAE;
-$yellow: #FFF000;
+$blue: #2980B9;
+$red: #E74C3C;
 
 $highlight1: #2E4559;
 $highlight2: #8593A6;
@@ -11,6 +7,6 @@ $highlight2: #8593A6;
 $text: #333;
 
 body {
-  background: #fff;
+  background: #ECF0F1;
   color: $text;
 }
