--- a/app/views/posts/edit.html.haml
+++ b/app/views/posts/edit.html.haml
@@ -1,2 +1,2 @@
-= standard_form_for post, url: post_path(post) do |form|
+= standard_form_for post, url: post_path(post), html: { class: 'post' } do |form|
   = render 'form', form: form
