--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -1,5 +1,7 @@
 - if user_signed_in?
-  = link_to 'Edit', [:edit, post]
+  .post-actions
+    = link_to 'Edit', [:edit, post]
+    = link_to 'Destroy', post, method: :delete, class: 'destroy'
 
 .medium-editor-document
   %h2= post.title
