Show post summaries on index page, styling work

--- a/app/views/layouts/_sidebar.html.haml
+++ b/app/views/layouts/_sidebar.html.haml
@@ -14,7 +14,9 @@
     .about
       %i.ion-ios-videocam-outline
       After Effects, web animation
-
+    %hr
+    .about
+      %em * Website a work in progress...
     .social
       = link_to 'https://github.com/michaeldawson' do
         %i.ion-social-github-outline
