--- a/app/assets/stylesheets/app/posts.scss
+++ b/app/assets/stylesheets/app/posts.scss
@@ -1,5 +1,5 @@
 .posts {
-  padding: 25px 50px;
+  padding: 50px;
   a {
     color: #333;
     &:hover {
@@ -8,9 +8,16 @@
   }
 }
 
+.post {
+  background: #fff;
+  padding: 50px;
+}
+
 .post-actions {
-  .destroy {
-    float: right
+  position: absolute;
+  top: 20px;
+  a {
+    margin: 20px;
   }
 }
 
