--- a/app/views/layouts/_sidebar.html.haml
+++ b/app/views/layouts/_sidebar.html.haml
@@ -14,7 +14,7 @@
     .about
       %i.ion-ios-videocam-outline
       After Effects, web animation
-    %hr
+    %hr.about
     .about
       %em * Website a work in progress...
     .social
