--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,6 +6,7 @@
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
     = stylesheet_link_tag    '//fonts.googleapis.com/css?family=Source+Sans+Pro:100'
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
+    %meta{ name: "viewport", content: "width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no" }/
   %body
     = render 'layouts/sidebar'
     .page= yield
