--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,5 +1,6 @@
 @import "base/bootstrap/bootstrap";
 @import "variables/**/*";
+@import "base/bootstrap/bootstrap-theme";
 @import "lib/ionicons/ionicons";
 @import "lib/medium-editor/medium-editor";
 @import "lib/medium-editor-overrides";
