--- a/app/assets/stylesheets/variables/colors.scss
+++ b/app/assets/stylesheets/variables/colors.scss
@@ -1,8 +1,8 @@
 $blue: #2980B9;
 $red: #E74C3C;
 
-$green: #bbb;
-$orange: #bbb;
+$green: #77b204;
+$orange: #fda705;
 
 $highlight1: #2E4559;
 $highlight2: #8593A6;
