--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,4 +9,6 @@
     %meta{ name: "viewport", content: "width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no" }/
   %body
     = render 'layouts/sidebar'
-    .page= yield
+    .page
+      = render 'layouts/flash'
+      = yield
