--- a/app/views/layouts/_sidebar.html.haml
+++ b/app/views/layouts/_sidebar.html.haml
@@ -2,21 +2,22 @@
   = image_tag 'test-tall.png'
   .content
     %h1.text-white= link_to 'Michael Dawson', root_path
-    %p
-      Software - Entrepreneurship - Animation
     %hr
     .about
-      %i.ion-ios-location-outline
-      Melbourne, Australia
+      %i.ion-ios-flask-outline.smaller
+      Experiment-driven software
     .about
       %i.ion-ios-gear-outline
       Ruby on Rails, React JS
     .about
-      %i.ion-ios-videocam-outline
+      %i.ion-ios-videocam-outline.smaller
       After Effects, web animation
-    %hr.about
     .about
-      %em * Website a work in progress...
+      %i.ion-ios-star-outline
+      Lean entrepreneurship
+    .about
+      %i.ion-ios-location-outline
+      Melbourne, Australia
     .social
       = link_to 'https://github.com/michaeldawson' do
         %i.ion-social-github-outline
