Add post categories

--- a/app/assets/stylesheets/app/sidebar.scss
+++ b/app/assets/stylesheets/app/sidebar.scss
@@ -1,6 +1,6 @@
 .sidebar {
   background: #fff;
-  border-right: 2px solid $red;
+  border-right: 2px solid $blue;
   position: fixed;
   top: 0;
   left: 0;
