--- a/app/views/layouts/_sidebar.html.haml
+++ b/app/views/layouts/_sidebar.html.haml
@@ -5,7 +5,7 @@
     %hr
     .about
       %i.ion-ios-flask-outline.smaller
-      Experiment-driven software
+      Experiment-driven development
     .about
       %i.ion-ios-gear-outline
       Ruby on Rails, React JS
