--- a/app/views/layouts/_sidebar.html.haml
+++ b/app/views/layouts/_sidebar.html.haml
@@ -19,9 +19,11 @@
       %i.ion-ios-location-outline
       Melbourne, Australia
     .social
-      = link_to 'https://github.com/michaeldawson' do
+      = link_to 'https://github.com/michaeldawson', target: '_blank' do
         %i.ion-social-github-outline
-      = link_to 'https://www.facebook.com/monsieurdawson' do
+      = link_to 'https://www.facebook.com/monsieurdawson', target: '_blank' do
         %i.ion-social-facebook-outline
-      = link_to 'https://twitter.com/michaelpdawson' do
+      = link_to 'https://twitter.com/michaelpdawson', target: '_blank' do
         %i.ion-social-twitter-outline
+      = link_to 'https://www.linkedin.com/in/michael-dawson-36453224', target: '_blank' do
+        %i.ion-social-linkedin-outline
