--- a/app/views/layouts/_sidebar.html.haml
+++ b/app/views/layouts/_sidebar.html.haml
@@ -4,26 +4,21 @@
     %h1.text-white= link_to 'Michael Dawson', root_path
     %hr
     .about
-      %i.ion-ios-flask-outline.smaller
-      Experiment-driven development
-    .about
       %i.ion-ios-gear-outline
       Ruby on Rails, React JS
     .about
       %i.ion-ios-videocam-outline.smaller
-      After Effects, web animation
+      Animation (Adobe After Effects)
     .about
       %i.ion-ios-star-outline
       Lean entrepreneurship
     .about
       %i.ion-ios-location-outline
-      Melbourne, Australia
+      Berlin, Germany
     .social
       = link_to 'https://github.com/michaeldawson', target: '_blank' do
         %i.ion-social-github-outline
       = link_to 'https://www.facebook.com/monsieurdawson', target: '_blank' do
         %i.ion-social-facebook-outline
-      = link_to 'https://twitter.com/michaelpdawson', target: '_blank' do
-        %i.ion-social-twitter-outline
       = link_to 'https://www.linkedin.com/in/michael-dawson-36453224', target: '_blank' do
         %i.ion-social-linkedin-outline
