--- a/src/components/main.css
+++ b/src/components/main.css
@@ -4,6 +4,16 @@ h3,
 h4 {
   letter-spacing: 1px;
 }
+
+h2 {
+  margin-bottom: 30px;
+}
+
+.post-date {
+  margin-bottom: 40px;
+  color: #666;
+}
+
 p,
 li {
   margin-bottom: 20px;
