--- a/src/components/main.css
+++ b/src/components/main.css
@@ -47,4 +47,10 @@ img[src="/airrobe-widget.png"] {
     width: 100%;
     margin: 20px 0;
   }
+
+  p,
+  li {
+    font-size: 17px;
+    letter-spacing: 0.4px;
+  }
 }
