--- a/src/components/main.css
+++ b/src/components/main.css
@@ -74,6 +74,21 @@ img[src="/airrobe-widget.png"] {
     margin: 20px 0;
   }
 
+  img[src="/rails.png"] {
+    width: 100%;
+    margin: 20px 0;
+  }
+
+  img[src="/booster.png"] {
+    width: 60%;
+    margin: 20px 20%;
+  }
+
+  img[src="/chess.png"] {
+    width: 60%;
+    margin: 20px 20%;
+  }
+
   p,
   li {
     font-size: 17px;
