--- a/src/components/main.css
+++ b/src/components/main.css
@@ -74,6 +74,10 @@ img[src="/airrobe-widget.png"] {
     margin: 20px 0;
   }
 
+  img[src="/airrobe-widget.png"] {
+    width: 100%;
+  }
+
   img[src="/rails.png"] {
     width: 100%;
     margin: 20px 0;
