--- a/src/components/main.css
+++ b/src/components/main.css
@@ -18,7 +18,7 @@ h2 {
 p,
 li {
   margin-bottom: 20px;
-  font-size: 18px;
+  font-size: 22px;
   letter-spacing: 0.5px;
   line-height: 1.4em;
 }
@@ -81,6 +81,10 @@ img[src="/blog-images/sharehouse.png"] {
 img[src="/blog-images/about.png"] {
   width: 33%;
   margin: 0 33%;
+}
+
+img[src="/blog-images/s2.png"] {
+  width: 80%;
 }
 
 @media (max-width: 768px) {
