Link to parents site

--- a/src/components/main.css
+++ b/src/components/main.css
@@ -81,6 +81,10 @@ img[src="/blog-images/loop-hole.png"] {
   margin: 0 25%;
 }
 
+img[src="/blog-images/blumen.png"] {
+  width: 120px;
+}
+
 img[src="/blog-images/me.jpeg"] {
   width: 33%;
   margin: 0 33%;
