Set icon in task bar

--- a/src/components/Main/Main.scss
+++ b/src/components/Main/Main.scss
@@ -1,3 +1,8 @@
 .startbar-item {
   min-height: 30px;
 }
+
+.r95.logo_32x32_4bit {
+  background-image: url('https://michaeldawson.com.au/favicon.ico');
+  background-size: contain;
+}
